# 2017

./: .gitignore  README.md  [Command Line]  gnome-todo-3.17.3.1.tar.xz  hello.js  mapingmind.vym
01CppTemplates/: New C++ Source File.cc
Algoritmi/: .~lock.Algoritmi in programare.odt#  Algoritmi in programare.odt
Cprogram/: hello.c
GladeGnome/: hello.glade
HTML/: Table.html
LinuxProgrammingInterface/: a.out  apue.h  copy.c  file.list  first.c  listfile.c  versiuneGlibc.c
M04CppXMLReader/: M04CppXMLReader.cbp  README.md
Matlab/: Bursa.asv  Bursa.m  ClassFibonacci.asv  ClassFibonacci.m  Matrice.prj  MatriceTest.asv  MatriceTest.m  fibonacii.m  matrice.asv  myRand.asv  myRand.m  myRand2.m  simpleStockTicker.m  testBursa.m
MyGnome/MyProject02/data/: Makefile  Makefile.am  Makefile.in
MyGnome/MyProject02/src/: Makefile  Makefile.am  Makefile.in  myproject02-version.h  myproject02-version.h.in  myproject02.h
OctaveCode/: .octave5.m.swo  .octave5.m.swp  CF201603.xls  date.txt  graph.eps  mufile.xls  mufile.xlsx  myfile.mat  octave1.m  octave2.m  octave3.m  octave4.m  octave5.m  octave6.m  tags
Persoana/: README.md  persoana  persoana.py
Python/: angajat.py
Ruby/: EmptyFile  adunare.rb  adunare1.rb  test1.rb
SabloaneDeProiectare/: 5.2_Sabloane_de_Proiectare.doc  oop-l3.doc
Scala/: Scala01.sh  Scala02.sh
TimeClass/: @PSC_ReadMe_3598_3.txt  Readme.txt  ex.cpp  string.cpp  string.h  time.h  timeclass.dsp  timeclass.dsw
gnome-todo-3.17.3.1/: Makefile.in  aclocal.m4  config.h.in  configure
nautilus-0.1.0/: Makefile.in  aclocal.m4  config.h.in  (+2 more)
(+817 files in other folders)
